--- a/backend/app/templates/prelievo_copie_template.html
+++ b/backend/app/templates/prelievo_copie_template.html
@@ -43,7 +43,7 @@
             <img src="{{ azienda.logo_url }}" alt="Logo" class="logo-img" />
             {% endif %}
             <div style="margin-top: 10px;">
-                <div class="bold uppercase">{{ azienda.nome_azienda|default('SISTEMA54') }}</div>
+                <div class="bold uppercase">{{ azienda.nome_azienda|default('GIT - Gestione Interventi Tecnici') }}</div>
                 <div style="font-size: 9px;">{{ azienda.indirizzo_completo|default('') }}</div>
                 <div style="font-size: 9px;">{{ azienda.telefono|default('') }} - {{ azienda.email|default('') }}</div>
             </div>
